# chessEngine

./: .gitgnore  .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  defenitions.cpp  defenitions.h  evaluation.cpp  hashkey.cpp  inits.cpp  main.cpp  misc.cpp  moveGeneration.cpp  perft.cpp  pvtable.cpp  search.cpp  test1.cpp  tests.cpp  uci.cpp
